Delphi/UVSMedia.pas


    function SetTimeOSD(OSDIndex: Integer; x: Integer; y: Integer;
      szTimeFormat: PAnsiChar; var info: TFontInfo): boolean;
    function SetTextOSD(OSDIndex: Integer; x: Integer; y: Integer;
      width: Integer; height: Integer; szText: PAnsiChar;
      var info: TFontInfo): boolean;
    function SetImageOSD(OSDIndex: Integer; x: Integer; y: Integer;
      width: Integer; height: Integer; opacity: Integer;
      szFile: PAnsiChar): boolean;
    function SetRectOSD(OSDIndex: Integer; x: Integer; y: Integer;
      width: Integer; height: Integer; var info: TStyleInfo): boolean;
    function SetEllipseOSD(OSDIndex: Integer; x: Integer; y: Integer;
      width: Integer; height: Integer; var info: TStyleInfo): boolean;
    function SetLineOSD(OSDIndex: Integer; x0: Integer; y0: Integer;
      x1: Integer; y1: Integer; var info: TLineInfo): boolean;
    function OSDControl(OSDIndex: Integer; cmd: OSDCommand;
      param0: PInteger = nil; param1: PInteger = nil): boolean;

    function SetVideoRawFrameCallback(cb: TFrameCallback;
      user: Pointer = nil): boolean;
    function SetVideoEncFrameCallback(streamIndex: Integer; cb: TFrameCallback;
      user: Pointer = nil): boolean;
    function SaveVideoSnapshot(szFilename: PAnsiChar;
      convert: PFrameConvert = nil; jpgQuality: LongWord = 100): boolean;
    function LockVideoRawFrame(var frame: TFrameInfo;
      waitMilliSec: LongWord = 1000): boolean;
    function UnlockVideoRawFrame: boolean;
    function CopyVideoFrame(var frame: TFrameInfo; convert: PFrameConvert = nil;
      waitMilliSec: LongWord = 1000): boolean;

    function SetAudioRawFrameCallback(cb: TFrameCallback;
      user: Pointer = nil): boolean;
    function SetAudioEncFrameCallback(cb: TFrameCallback;
      user: Pointer = nil): boolean;
    function LockAudioRawFrame(var frame: TFrameInfo;
      waitMilliSec: LongWord = 1000): boolean;
    function UnlockAudoRawFrame: boolean;
    function CopyAudioRawFrame(var frame: TFrameInfo;
      waitMilliSec: LongWord = 1000): boolean;

    { RTSP server must be created }
    function RTSPStart(streamIndex: Integer; rtspPort: Word; hasAudio: boolean;
      szSessionName: PAnsiChar; multicast: PRTPMulticast = nil): boolean;
    function RTSPStop(streamIndex: Integer): boolean;
    function RTSPGetURL(streamIndex: Integer; var url: TURLInfo): boolean;

    function RTMPSend(streamIndex: Integer; szURL: PAnsiChar;
      hasAudio: boolean): boolean;
    function RTMPStop(streamIndex: Integer): boolean;
    function RTMPGetURL(streamIndex: Integer; var url: TURLInfo): boolean;

    function NDICreate(szSourceName: PAnsiChar; szGroupName: PAnsiChar = nil;
      szXMLMetaData: PAnsiChar = nil; isAsync: boolean = True): boolean;
    function NDIConfig(convert: PFrameConvert;
      skipFrameRate: Integer = 0): boolean;
    function NDIStart(hasAudio: boolean): boolean;
    function NDIStop: boolean;
    function NDIDestroy: boolean;
  end;

function uvs_media_init(flags: Integer): Integer; stdcall; external uvsdll;
procedure uvs_media_exit; stdcall; external uvsdll;
function uvs_get_version: Integer; stdcall; external uvsdll;

function uvs_enum_device(dev: DevType; info: PDevInfo; var num: Integer)
  : Integer; stdcall; external uvsdll;
function uvs_set_device_callback(cb: TDevCallback; user: Pointer): Integer;
  stdcall; external uvsdll;
function uvs_get_device_count: Integer; stdcall; external uvsdll;

function uvs_query_video_encoder(dev: UVSObj; codec: VideoCodec): Integer;
  stdcall; external uvsdll;
function uvs_calc_buffer_size(frame: FrameType; width: Integer; height: Integer;
  stride: Integer): Integer; stdcall; external uvsdll;

function uvs_create_frame(frame: FrameType; width: Integer; height: Integer;
  stride: Integer; var info: TFrameInfo): Integer; stdcall; external uvsdll;
function uvs_destroy_frame(var frame: TFrameInfo): Integer; stdcall; external uvsdll;

function uvs_set_nosignal_image(imageFile: PAnsiChar; draw: DrawMode;
  backColor: COLORREF): Integer; stdcall; external uvsdll;

function uvs_dev_open(var info: TDevInfo; var ret: Integer): UVSObj; stdcall;
  external uvsdll;
function uvs_dev_close(dev: UVSObj): Integer; stdcall; external uvsdll;
function uvs_get_dev_info(dev: UVSObj; var info: TDevInfo): Integer; stdcall;
  external uvsdll;

function uvs_query_hardware_info(dev: UVSObj; var info: THardwareInfo): Integer;
  stdcall; external uvsdll;
function uvs_enum_audio_format(dev: UVSObj; format: PAudioFormat;
  var num: Integer): Integer; stdcall; external uvsdll;
function uvs_enum_video_format(dev: UVSObj; source: SourceType;
  format: PVideoFormat; var num: Integer): Integer; stdcall; external uvsdll;

function uvs_set_audio_device(dev: UVSObj; audio: DevType; var info: TDevInfo)
  : Integer; stdcall; external uvsdll;
function uvs_create_property_page(dev: UVSObj; page: PropertyPage; owner: HWND;
  x: Integer; y: Integer; szCaption: PAnsiChar): Integer; stdcall;
  external uvsdll;

function uvs_dev_control(dev: UVSObj; state: DevState): Integer; stdcall;
  external uvsdll;

function uvs_get_audio_property(dev: UVSObj; format: PAudioFormat;
  var codec: AudioCodec): Integer; stdcall; external uvsdll;
function uvs_set_audio_property(dev: UVSObj; format: PAudioFormat;
  codec: AudioCodec): Integer; stdcall; external uvsdll;

function uvs_set_audio_mute(dev: UVSObj; mute: Bool): Integer; stdcall;
  external uvsdll;
function uvs_get_audio_volume(dev: UVSObj; var volume: Integer): Integer;
  stdcall; external uvsdll;
function uvs_set_audio_volume(dev: UVSObj; volume: Integer): Integer; stdcall;
  external uvsdll;
function uvs_get_audio_balance(dev: UVSObj; var balance: Integer): Integer;
  stdcall; external uvsdll;
function uvs_set_audio_balance(dev: UVSObj; balance: Integer): Integer;
  stdcall; external uvsdll;

function uvs_get_video_input(dev: UVSObj; var index: Integer;
  var input: Integer; var num: Integer): Integer; stdcall; external uvsdll;
function uvs_set_video_input(dev: UVSObj; index: Integer): Integer; stdcall;
  external uvsdll;

function uvs_get_video_property(dev: UVSObj; source: SourceType;
  var format: TVideoFormat): Integer; stdcall; external uvsdll;
function uvs_set_video_property(dev: UVSObj; source: SourceType;
  var format: TVideoFormat): Integer; stdcall; external uvsdll;

function uvs_get_video_mirror(dev: UVSObj; var horizontal: Bool;
  var vertical: Bool): Integer; stdcall; external uvsdll;
function uvs_set_video_mirror(dev: UVSObj; horizontal: Bool;
  vertical: Bool): Integer; stdcall; external uvsdll;
function uvs_get_video_status(dev: UVSObj; var signal: Bool;
  var mode: Bool): Integer; stdcall; external uvsdll;

function uvs_get_video_effect_range(dev: UVSObj; effect: VideoEffect;
  var minVal: Integer; var maxVal: Integer; var step: Integer;
  var defaultVal: Integer): Integer; stdcall; external uvsdll;
function uvs_get_video_effect(dev: UVSObj; effect: VideoEffect;
  var val: Integer): Integer; stdcall; external uvsdll;
function uvs_set_video_effect(dev: UVSObj; effect: VideoEffect; val: Integer)
  : Integer; stdcall; external uvsdll;

function uvs_set_video_encode_config(dev: UVSObj; streamIndex: Integer;
  codec: VideoCodec; var config: TEncodeConfig): Integer; stdcall; external uvsdll;
function uvs_get_video_encode_config(dev: UVSObj; streamIndex: Integer;
  var codec: VideoCodec; var config: TEncodeConfig): Integer; stdcall;
  external uvsdll;

function uvs_request_video_key_frame(dev: UVSObj; streamIndex: Integer)
  : Integer; stdcall; external uvsdll;
function uvs_get_video_encode_status(dev: UVSObj; streamIndex: Integer;
  var status: TEncodeStatus): Integer; stdcall; external uvsdll;

function uvs_start_encode(dev: UVSObj; streamIndex: Integer): Integer; stdcall;
  external uvsdll;
function uvs_stop_encode(dev: UVSObj; streamIndex: Integer): Integer; stdcall;
  external uvsdll;

function uvs_set_record_metadata(dev: UVSObj; streamIndex: Integer;
  szTitle: PAnsiChar; szComment: PAnsiChar; szArtist: PAnsiChar;
  szGenre: PAnsiChar; szComposer: PAnsiChar): Integer; stdcall; external uvsdll;
function uvs_start_record(dev: UVSObj; streamIndex: Integer;
  szFile1: PAnsiChar; szFile2: PAnsiChar; writeAudio: Bool;
  repairSupport: Bool; KBytes: LongWord; MilliSec: LongWord): Integer;
  stdcall; external uvsdll;
function uvs_get_record_filename(dev: UVSObj; streamIndex: Integer;
  filename: PFileName; var num: Integer): Integer; stdcall; external uvsdll;
function uvs_pause_record(dev: UVSObj; streamIndex: Integer;
  recResume: Bool; requestKeyframe: Bool): Integer; stdcall;
  external uvsdll;
function uvs_stop_record(dev: UVSObj; streamIndex: Integer): Integer; stdcall;
  external uvsdll;

function uvs_start_preview(dev: UVSObj; wnd: HWND; disp: DisplayType): Integer;
  stdcall; external uvsdll;
function uvs_get_preview_freeze(dev: UVSObj; var freeze: Bool): Integer;
  stdcall; external uvsdll;
function uvs_set_preview_freeze(dev: UVSObj; freeze: Bool): Integer;
  stdcall; external uvsdll;
function uvs_set_preview_rect(dev: UVSObj; wndRect: PRect; cropRect: PRect;
  color: COLORREF): Integer; stdcall; external uvsdll;
function uvs_stop_preview(dev: UVSObj): Integer; stdcall; external uvsdll;

function uvs_set_time_osd(dev: UVSObj; OSDIndex: Integer; x: Integer;
  y: Integer; szTimeFormat: PAnsiChar; var info: TFontInfo): Integer; stdcall;
  external uvsdll;
function uvs_set_text_osd(dev: UVSObj; OSDIndex: Integer; x: Integer;
  y: Integer; width: Integer; height: Integer; szText: PAnsiChar;
  var info: TFontInfo): Integer; stdcall; external uvsdll;
function uvs_set_image_osd(dev: UVSObj; OSDIndex: Integer; x: Integer;
  y: Integer; width: Integer; height: Integer; opacity: Integer;
  szFile: PAnsiChar): Integer; stdcall; external uvsdll;
function uvs_set_rect_osd(dev: UVSObj; OSDIndex: Integer; x: Integer;
  y: Integer; width: Integer; height: Integer; var info: TStyleInfo): Integer;
  stdcall; external uvsdll;
function uvs_set_ellipse_osd(dev: UVSObj; OSDIndex: Integer; x: Integer;
  y: Integer; width: Integer; height: Integer; var info: TStyleInfo): Integer;
  stdcall; external uvsdll;
function uvs_set_line_osd(dev: UVSObj; OSDIndex: Integer; x0: Integer;
  y0: Integer; x1: Integer; y1: Integer; var info: TLineInfo): Integer; stdcall;
  external uvsdll;
function uvs_osd_control(dev: UVSObj; OSDIndex: Integer; cmd: OSDCommand;
  param0: PInteger; param1: PInteger): Integer; stdcall; external uvsdll;

function uvs_create_frame_preview(wnd: HWND; disp: DisplayType): UVSObj;
  stdcall; external uvsdll;
function uvs_frame_preview(obj: UVSObj; var frame: TFrameInfo): Integer; stdcall;
  external uvsdll;
function uvs_set_frame_preview_rect(obj: UVSObj; wndRect: PRECT;
  cropRect: PRECT; color: COLORREF): Integer; stdcall; external uvsdll;
function uvs_destroy_frame_preview(obj: UVSObj): Integer; stdcall;
  external uvsdll;

function uvs_set_video_raw_frame_callback(dev: UVSObj; cb: TFrameCallback;
  user: Pointer): Integer; stdcall; external uvsdll;
function uvs_set_video_enc_frame_callback(dev: UVSObj; streamIndex: Integer;
  cb: TFrameCallback; user: Pointer): Integer; stdcall; external uvsdll;

function uvs_convert_video_frame(var convert: TFrameConvert; var src: TFrameInfo;
  var dest: TFrameInfo): Integer; stdcall; external uvsdll;
function uvs_save_video_frame(szFilename: PAnsiChar; convert: PFrameConvert;
  var frame: TFrameInfo; jpgQuality: LongWord): Integer; stdcall; external uvsdll;
function uvs_save_video_snapshot(dev: UVSObj; szFilename: PAnsiChar;
  convert: PFrameConvert; jpgQuality: LongWord): Integer; stdcall;
  external uvsdll;

function uvs_lock_video_raw_frame(dev: UVSObj; var frame: TFrameInfo;
  waitMilliSec: LongWord): Integer; stdcall; external uvsdll;
function uvs_unlock_video_raw_frame(dev: UVSObj): Integer; stdcall;
  external uvsdll;
function uvs_copy_video_frame(dev: UVSObj; convert: PFrameConvert;
  var frame: TFrameInfo; waitMilliSec: LongWord): Integer; stdcall; external uvsdll;
